Updated GUI launch command from spawn-gui to spawn-decrypt-gui

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,7 +21,7 @@ dependencies = [
 
 # Entry points for CLI & GUI
 [project.scripts]
-spawn-gui = "spawn_decrypt.gui:main"
+spawn-decrypt-gui = "spawn_decrypt.gui:main"
 spawn-authorize = "spawn_decrypt.__main__:run_authorize"
 spawn-decrypt   = "spawn_decrypt.__main__:run_decrypt"
 
