Rev 0.0.6, Updated GUI with one-shot authorize+decrypt, and support for SAID & JSPF files, with sample files embedded

--- a/src/spawn_decrypt/settings.env
+++ b/src/spawn_decrypt/settings.env
@@ -1,6 +1,8 @@
 OUTPUT_DIR=''
 DEC_WALLET=''
-SOURCE='c0ZYiDxKCCA9URjJgAXqUZA1P6M9VACRdMtEYhnd1t0'
+SOURCE=''
 DEC_KEY_FILE=''
 NEW_USER_WALLET=''
-CONTRACT_OR_SPWN='c0ZYiDxKCCA9URjJgAXqUZA1P6M9VACRdMtEYhnd1t0'
+CONTRACT_OR_SPWN=''
+CALLER_WALLET=''
+KEY_FILE=''
